[tool.poetry]
name = "metrology-data-analysis"
version = "0.1.0"
description = ""
authors = ["Alson van der Meulen <git@alm.nufan.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "~1.24.0"
pandas = "^2.0"
matplotlib = "^3.7.2"
scipy = "~1.10.0"
notebook = "^7.0.2"
scikit-learn = "^1.3.0"
seaborn = "^0.13.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
