[tool.poetry]
name = "metrology-data-analysis"
version = "0.1.0"
description = ""
authors = ["Alson van der Meulen <git@alm.nufan.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
numpy = ">=1.24"
pandas = "^2.0"
matplotlib = "^3.7"
scipy = "^1.13"
notebook = "^7.2"
scikit-learn = "^1.6"
seaborn = "^0.13"
openpyxl = "^3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
